--- a/Areas/Customer/Views/UserProfile/Delete.cshtml
+++ b/Areas/Customer/Views/UserProfile/Delete.cshtml
@@ -12,96 +12,65 @@
     string userId = UserManager.GetUserId(User);
 }
 
-<h2 class="text-info">Delete user</h2>
-<form asp-action="Delete" method="post" id="user-form" enctype="multipart/form-data">
-    <div class="p-4 rounded border">
-        <div asp-validation-summary="ModelOnly" class="text-danger">
+<div class="d-flex justify-content-center">
+    <div class="card shadow-lg mt-4 w-75">
+        <div class="card-header bg-danger text-white">
+            <h4 class="mb-0 text-center" style="font-size: 1.5rem;">Delete User Account</h4>
         </div>
-        <input type="hidden" asp-for="Id" value="@Model.Id" />
-        <h3>@ViewBag.message</h3>
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="UserName"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="UserName" class="form-control" readonly="readonly" />
-            </div>
-            <span asp-validation-for="UserName" class="text-danger"></span>
-        </div>
+        <div class="card-body p-5" style="font-size: 1.25rem;">
+            <form asp-action="Delete" method="post" id="user-form" enctype="multipart/form-data">
+                <input type="hidden" asp-for="Id" value="@Model.Id" />
 
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="Email"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="Email" class="form-control" readonly="readonly" />
-            </div>
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
+                <div class="mb-4">
+                    <h4 class="text-danger">Are you sure you want to delete this account?</h4>
+                </div>
 
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="PhoneNumber"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="PhoneNumber" class="form-control" readonly="readonly" />
-            </div>
-            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-        </div>
+                <div class="form-group row mb-3">
+                    <label class="col-4 col-form-label font-weight-normal">@Html.DisplayNameFor(model => model.UserName):</label>
+                    <div class="col-8">
+                        <p class="form-control-plaintext">@Model.UserName</p>
+                    </div>
+                </div>
 
+                <div class="form-group row mb-3">
+                    <label class="col-4 col-form-label font-weight-normal">@Html.DisplayNameFor(model => model.Email):</label>
+                    <div class="col-8">
+                        <p class="form-control-plaintext">@Model.Email</p>
+                    </div>
+                </div>
 
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="FirstName"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="FirstName" class="form-control" readonly="readonly" />
-            </div>
-            <span asp-validation-for="FirstName" class="text-danger"></span>
-        </div>
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="LastName"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="LastName" class="form-control" readonly="readonly" />
-            </div>
-            <span asp-validation-for="LastName" class="text-danger"></span>
-        </div>
+                <div class="form-group row mb-3">
+                    <label class="col-4 col-form-label font-weight-normal">@Html.DisplayNameFor(model => model.PhoneNumber):</label>
+                    <div class="col-8">
+                        <p class="form-control-plaintext">@Model.PhoneNumber</p>
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Delete" />
-            <a class="btn btn-default" href="/Customer/UserProfile/Deshboard/@userId" title="Manage"><i class="fa-solid fa-user"></i>Back to Profile </a>
+                <div class="form-group row mb-3">
+                    <label class="col-4 col-form-label font-weight-normal">@Html.DisplayNameFor(model => model.FirstName):</label>
+                    <div class="col-8">
+                        <p class="form-control-plaintext">@Model.FirstName</p>
+                    </div>
+                </div>
+
+                <div class="form-group row mb-4">
+                    <label class="col-4 col-form-label font-weight-normal">@Html.DisplayNameFor(model => model.LastName):</label>
+                    <div class="col-8">
+                        <p class="form-control-plaintext">@Model.LastName</p>
+                    </div>
+                </div>
+
+                <div class="form-group text-center">
+                    <input type="submit" class="btn btn-danger" value="Delete Account" />
+                    <a class="btn btn-secondary" href="/Customer/UserProfile/Deshboard/@userId" title="Manage">Back to Profile</a>
+                </div>
+            </form>
         </div>
     </div>
-</form>
+</div>
 
-@section Scripts{
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-
-    <script>
-        $(document).ready(function () {
-            $("#user-form").validate({
-                rules: {
-                    UserName: {
-                        required: true,
-                    },
-                    PasswordHash: {
-                        required: true,
-                    }
-                },
-                messages: {
-                    UserName: "Enter your UserName",
-                    PasswordHash: "Enter your password"
-                }
-
-            });
-        });
-    </script>
 }
-
-
-
-
