--- a/Areas/Customer/Views/UserProfile/Details.cshtml
+++ b/Areas/Customer/Views/UserProfile/Details.cshtml
@@ -1,8 +1,10 @@
 ﻿@model OnlineShop.Models.ApplicationUser
+
 @{
     ViewData["Title"] = "Details";
 }
-<br />
+
+
 
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<IdentityUser> UserManager
@@ -12,149 +14,107 @@
 }
 
 <div class="row">
-
     <div class="col-lg-12">
-
-        <div class="card">
-            <div class="card-header">
-                <h2 class="card-title text-info"> User Information</h2>
+        <div class="card shadow-lg mt-4">
+            <div class="card-header bg-info text-white">
+                <h2 class="card-title mb-0" style="font-size: 1.5rem;">User Information</h2>
             </div>
-            <div class="card-body">
+            <div class="card-body p-5" style="font-size: 1.25rem;">
                 <form asp-action="Details" method="post" id="user-form" enctype="multipart/form-data">
-                    <div>
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <input type="hidden" asp-for="Id" value="@Model.Id" />
-                        <h3>@ViewBag.message</h3>
+                    <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
+                    <input type="hidden" asp-for="Id" value="@Model.Id" />
+                    <h3>@ViewBag.message</h3>
 
-                        <div class="row">
-                            <div class="col-lg-8">
-
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="UserName"></label>
-                                    </div>
-                                    <div class="col-5">
-                                        <input asp-for="UserName" class="form-control" readonly="readonly" />
-                                    </div>
-                                    <span asp-validation-for="UserName" class="text-danger"></span>
+                    <div class="row">
+                        <div class="col-lg-8">
+                            @* User Information Fields *@
+                            <div class="form-group row mb-3">
+                                <label class="col-3 font-weight-bold" asp-for="UserName"></label>
+                                <div class="col-9">
+                                    <input asp-for="UserName" class="form-control" readonly="readonly" />
                                 </div>
-
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="Email"></label>
-                                    </div>
-                                    <div class="col-5">
-                                        <input asp-for="Email" class="form-control" readonly="readonly" />
-                                    </div>
-                                    <span asp-validation-for="Email" class="text-danger"></span>
-                                </div>
-
-
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="FirstName"></label>
-                                    </div>
-                                    <div class="col-5">
-                                        <input asp-for="FirstName" class="form-control" readonly="readonly" />
-                                    </div>
-                                    <span asp-validation-for="FirstName" class="text-danger"></span>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="LastName"></label>
-                                    </div>
-                                    <div class="col-5">
-                                        <input asp-for="LastName" class="form-control" readonly="readonly" />
-                                    </div>
-                                    <span asp-validation-for="LastName" class="text-danger"></span>
-                                </div>
-
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="PhoneNumber"></label>
-                                    </div>
-                                    <div class="col-5">
-                                        <input asp-for="PhoneNumber" class="form-control" readonly="readonly" />
-                                    </div>
-                                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                                </div>
-
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="DateOfBirth">Date of Birth</label>
-                                    </div>
-                                    <div class="col-5">
-                                        <input asp-for="DateOfBirth" type="date" class="form-control" readonly="readonly" />
-                                    </div>
-                                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="Address">Address</label>
-                                    </div>
-                                    <div class="col-5">
-                                        <input asp-for="Address" class="form-control" readonly="readonly" />
-                                    </div>
-                                    <span asp-validation-for="Address" class="text-danger"></span>
-                                </div>
-
-                            </div>
-                            <div class="col-lg-4">
-                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                <div class="form-group">
-                                    <label asp-for="ProfilePicture" style="width: 100%; border-bottom:4px"></label>
-                                    @if (Model.ProfilePicture != null)
-                                    {
-                                        <img id="profilePicture" style="width:200px;height:200px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(Model.ProfilePicture))">
-                                    }
-                                    else
-                                    {
-                                        <img id="profilePicture" style="width:200px;height:200px; object-fit:cover" src="">
-                                    }
-                                </div>
-
+                                <span asp-validation-for="UserName" class="text-danger"></span>
                             </div>
 
-                        </div>
-                        <br />
+                            <div class="form-group row mb-3">
+                                <label class="col-3 font-weight-bold" asp-for="Email"></label>
+                                <div class="col-9">
+                                    <input asp-for="Email" class="form-control" readonly="readonly" />
+                                </div>
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
 
-                        <div class="form-group">
-                            <input type="submit" class="btn btn-primary" value="Update" />
-                            <a asp-area="Customer" asp-controller="UserProfile" asp-action="Edit" asp-route-id="@userId" class="btn btn-primary">Edit Information</a>
+                            <div class="form-group row mb-3">
+                                <label class="col-3 font-weight-bold" asp-for="FirstName"></label>
+                                <div class="col-9">
+                                    <input asp-for="FirstName" class="form-control" readonly="readonly" />
+                                </div>
+                                <span asp-validation-for="FirstName" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group row mb-3">
+                                <label class="col-3 font-weight-bold" asp-for="LastName"></label>
+                                <div class="col-9">
+                                    <input asp-for="LastName" class="form-control" readonly="readonly" />
+                                </div>
+                                <span asp-validation-for="LastName" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group row mb-3">
+                                <label class="col-3 font-weight-bold" asp-for="PhoneNumber"></label>
+                                <div class="col-9">
+                                    <input asp-for="PhoneNumber" class="form-control" readonly="readonly" />
+                                </div>
+                                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group row mb-3">
+                                <label class="col-3 font-weight-bold" asp-for="DateOfBirth">Date of Birth</label>
+                                <div class="col-9">
+                                    <input asp-for="DateOfBirth" type="date" class="form-control" readonly="readonly" />
+                                </div>
+                                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group row mb-3">
+                                <label class="col-3 font-weight-bold" asp-for="Address">Address</label>
+                                <div class="col-9">
+                                    <input asp-for="Address" class="form-control" readonly="readonly" />
+                                </div>
+                                <span asp-validation-for="Address" class="text-danger"></span>
+                            </div>
                         </div>
+
+                        <div class="col-lg-4 text-center">
+                            <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
+                            <div class="form-group">
+                                <label asp-for="ProfilePicture" class="d-block font-weight-bold" style="border-bottom: 4px solid #007bff; width: 100%;"></label>
+                                @if (Model.ProfilePicture != null)
+                                {
+                                    <img id="profilePicture" style="width: 200px; height: 200px; object-fit: cover;" src="data:image/*;base64,@(Convert.ToBase64String(Model.ProfilePicture))" />
+                                }
+                                else
+                                {
+                                    <img id="profilePicture" style="width: 200px; height: 200px; object-fit: cover;" src="" />
+                                }
+                            </div>
+                        </div>
+                    </div>
+
+                    <br />
+
+                    <div class="form-group text-center">
+                        <input type="submit" class="btn btn-primary btn-lg" value="Update" />
+                        <a asp-area="Customer" asp-controller="UserProfile" asp-action="Edit" asp-route-id="@userId" class="btn btn-primary btn-lg">Edit Information</a>
                     </div>
                 </form>
             </div>
         </div>
-
-
     </div>
-    <div class="col-lg-2"></div>
 </div>
 
-@section Scripts{
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-
-    <script>
-        $(document).ready(function () {
-            $("#user-form").validate({
-                rules: {
-                    UserName: {
-                        required: true,
-                    },
-                    PasswordHash: {
-                        required: true,
-                    }
-                },
-                messages: {
-                    UserName: "Enter your email",
-                    PasswordHash: "Enter your password"
-                }
-
-            });
-        });
-    </script>
 }
-
