--- a/Areas/Customer/Views/UserProfile/Edit.cshtml
+++ b/Areas/Customer/Views/UserProfile/Edit.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Edit";
 }
+
 <br />
 
 @using Microsoft.AspNetCore.Identity
@@ -11,90 +12,69 @@
     string userId = UserManager.GetUserId(User);
 }
 
-<div class="row">
-
-    <div class="col-lg-12">
-
-        <div class="card">
-            <div class="card-header">
-                <h2 class="card-title text-info">Edit User</h2>
-            </div>
-            <div class="card-body">
-                <form asp-action="Edit" method="post" id="user-form" enctype="multipart/form-data">
-                    <div>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title text-info text-center">Update User Information</h3>
+                </div>
+                <div class="card-body">
+                    <form asp-action="Edit" method="post" id="user-form" enctype="multipart/form-data">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <input type="hidden" asp-for="Id" value="@Model.Id" />
-                        <h3>@ViewBag.message</h3>
+                        <h3 class="text-center">@ViewBag.message</h3>
 
                         <div class="row">
                             <div class="col-lg-8">
-
-
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="FirstName"></label>
-                                    </div>
-                                    <div class="col-5">
+                                <div class="form-group row space_up mt-2">
+                                    <label asp-for="FirstName" class="col-4 col-form-label">First Name</label>
+                                    <div class="col-8">
                                         <input asp-for="FirstName" class="form-control" />
                                     </div>
-                                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                                    <span asp-validation-for="FirstName" class="text-danger col-12"></span>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="LastName"></label>
-                                    </div>
-                                    <div class="col-5">
+                                <div class="form-group row space_up mt-2">
+                                    <label asp-for="LastName" class="col-4 col-form-label">Last Name</label>
+                                    <div class="col-8">
                                         <input asp-for="LastName" class="form-control" />
                                     </div>
-                                    <span asp-validation-for="LastName" class="text-danger"></span>
+                                    <span asp-validation-for="LastName" class="text-danger col-12"></span>
                                 </div>
-
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="Email"></label>
-                                    </div>
-                                    <div class="col-5">
+                                <div class="form-group row space_up mt-2">
+                                    <label asp-for="Email" class="col-4 col-form-label">Email</label>
+                                    <div class="col-8">
                                         <input asp-for="Email" class="form-control" />
                                     </div>
-                                    <span asp-validation-for="Email" class="text-danger"></span>
+                                    <span asp-validation-for="Email" class="text-danger col-12"></span>
                                 </div>
-
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="PhoneNumber"></label>
-                                    </div>
-                                    <div class="col-5">
+                                <div class="form-group row mt-2">
+                                    <label asp-for="PhoneNumber" class="col-4 col-form-label">Phone Number</label>
+                                    <div class="col-8">
                                         <input asp-for="PhoneNumber" class="form-control" />
                                     </div>
-                                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                                    <span asp-validation-for="PhoneNumber" class="text-danger col-12"></span>
                                 </div>
-
-
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="DateOfBirth">Date of Birth</label>
-                                    </div>
-                                    <div class="col-5">
+                                <div class="form-group row mt-2">
+                                    <label asp-for="DateOfBirth" class="col-4 col-form-label">Date of Birth</label>
+                                    <div class="col-8">
                                         <input asp-for="DateOfBirth" type="date" class="form-control" />
                                     </div>
-                                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                                    <span asp-validation-for="DateOfBirth" class="text-danger col-12"></span>
                                 </div>
-
-                                <div class="form-group row">
-                                    <div class="col-3">
-                                        <label asp-for="Address"> Address </label>
-                                    </div>
-                                    <div class="col-5 ">
+                                <div class="form-group row mt-2">
+                                    <label asp-for="Address" class="col-4 col-form-label">Address</label>
+                                    <div class="col-8">
                                         <input asp-for="Address" class="form-control" />
                                     </div>
-                                    <span asp-validation-for="Address" class="text-danger"></span>
+                                    <span asp-validation-for="Address" class="text-danger col-12"></span>
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-lg-4 text-center mt-2">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-group">
-                                    <label asp-for="ProfilePicture" style="width: 100%; border-bottom:4px"></label>
+                                    <label asp-for="ProfilePicture" class="d-block"></label>
                                     @if (Model.ProfilePicture != null)
                                     {
                                         <img id="profilePicture" style="width:200px;height:200px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(Model.ProfilePicture))">
@@ -106,66 +86,36 @@
                                     <input type="file"
                                            accept=".png,.jpg,.jpeg,.gif,.tif"
                                            asp-for="ProfilePicture"
-                                           class="form-control"
-                                           style="border:0px!important;padding: 0px;padding-top: 5px;padding-bottom: 30px;"
+                                           class="form-control mt-2"
                                            onchange="document.getElementById('profilePicture').src = window.URL.createObjectURL(this.files[0])" />
                                     <span asp-validation-for="ProfilePicture" class="text-danger"></span>
                                 </div>
-
                             </div>
-
                         </div>
                         <br />
 
-                        <div class="form-group">
+                        <div class="form-group text-center">
                             <input type="submit" class="btn btn-primary" value="Update" />
-                            <a class="btn btn-default"  href="/Customer/UserProfile/Deshboard/@userId" title="Manage"><i class="fa-solid fa-user"></i>Back to Profile </a>
+                            <a class="btn btn-secondary" href="/Customer/UserProfile/Deshboard/@userId" title="Manage">Back to Profile</a>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
-
-
     </div>
-    <div class="col-lg-2"></div>
+    <br />
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10 text-center">
+            <h4>Other Settings</h4>
+            <br />
+            <a asp-area="Identity" asp-page="/Account/Manage/ChangePassword" class="btn btn-primary"title="Manage">Password Section</a>
+        </div>
+    </div>
 </div>
 
-<div class="row">
-
-        <h4> Others setting </h4>
-      <br/>
-        <a asp-area="Identity" asp-page="/Account/Manage/ChangePassword" title="Manage"> Password Section</a>
-        
-    </div>
-    <div class="col-lg-2"></div>
-
-
-
-@section Scripts{
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+<style>
+    .space_up {
+        margin_top: 5px;
     }
-
-    <script>
-        $(document).ready(function () {
-            $("#user-form").validate({
-                rules: {
-                    UserName: {
-                        required: true,
-                    },
-                    PasswordHash: {
-                        required: true,
-                    }
-                },
-                messages: {
-                    UserName: "Enter your email",
-                    PasswordHash: "Enter your password"
-                }
-
-            });
-        });
-    </script>
-}
-
-
+</style>
+                        
